--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "babel-polyfill": "^6.26.0",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-helmet": "^6.1.0",
     "react-is": "^16.8.0",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
