add next-images package

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-polyfill": "^6.26.0",
     "next": "latest",
+    "next-images": "^1.7.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-helmet": "^6.1.0",
